# DATA_DELETED

./: .gitignore  AllClasses.h  CMakeLists.txt  EditTool.cpp  EditTool.h  Game.cpp  Game.h  Parameters.h  README.md  dialog.cpp  dialog.h  main.cpp
Creatures/: CMakeLists.txt  Creature.cpp  Creature.h  Forager.cpp  Forager.h  Header_Creatures.h  Operative.cpp  Operative.h  Sentient.cpp  Sentient.h  Wild.cpp  Wild.h
Items/: AmmoContainer.cpp  AmmoContainer.h  CMakeLists.txt  Gun.cpp  Gun.h  Header_Items.h  HealthKit.cpp  HealthKit.h  Item.cpp  Item.h  Table.cpp  Table.h
Level/: CMakeLists.txt  Cell.cpp  Cell.h  CellIt.cpp  CellIt.h  Level.cpp  Level.h
Map/: CMakeLists.txt  Map.cpp  Map.h  Map_STL.h  Map_old.h
Tests/: CMakeLists.txt
Tests/Game_tests/: CMakeLists.txt  test1.cpp
files/: 123  AConts.cfg  Cells.cfg  Creatures.cfg  Forags.cfg  Guns.cfg  HKits.cfg  Items.cfg  Opers.cfg  Sents.cfg  Wilds.cfg  c1.cfg  c2.cfg  cr2.cfg  i2.cfg  presets.cfg
